--- a/app/src/main/res/layout/fragment_new_ciudad.xml
+++ b/app/src/main/res/layout/fragment_new_ciudad.xml
@@ -22,21 +22,32 @@
             android:layout_marginTop="48dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:textColor="#000000"
             android:text="@={viewModel.editCiudad}"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvAvisos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:textAlignment="center"
+            android:textColor="#706F6F"
+            android:text="@{viewModel.aviso}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="76dp"
+            android:onClick="@{()->viewModel.buscarCiudad()}"
             android:text="Agregar Ciudad"
-            android:onClick="@{()->viewModel.agregarCiudad()}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
     </androidx.constraintlayout.widget.ConstraintLayout>
