--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -44,10 +44,11 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="24dp"
                     android:text="@{viewModel.weather.name}"
+                    android:textAlignment="textStart"
                     android:textColor="#000000"
-                    android:textSize="34sp"
+                    android:textSize="48sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="SANTA FE" />
@@ -57,13 +58,25 @@
                     android:layout_width="333dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@{viewModel.notificacion}"
+                    android:text="@{viewModel.weather.ultimaActualizacion}"
                     android:textColor="#272424"
                     android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvCiudad"
-                    tools:text="notificaciones" />
+                    tools:text="ultima actualizacion: 12/03/2021" />
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="71dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginTop="12dp"
+                    android:contentDescription="@string/c_actualizar"
+                    android:onClick="@{()->viewModel.actualizar()}"
+                    android:src="@android:drawable/ic_popup_sync"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tvCiudad" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -76,7 +89,6 @@
                 android:background="#4DB6AC"
                 android:orientation="vertical"
                 android:padding="4dp"
-                android:visibility="@{viewModel.datos}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +98,7 @@
                     android:id="@+id/tvTemp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="28dp"
                     android:textColor="#000000"
                     android:textSize="48sp"
                     android:textStyle="bold"
@@ -163,46 +175,38 @@
                     tools:text="87%" />
 
                 <TextView
-                    android:id="@+id/tvAviso"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewModel.weather.ultimaActualizacion.toString()}"
-                    android:textColor="#FF0000"
-                    android:visibility="@{viewModel.aviso}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="13/07/21 13:00" />
+                    android:id="@+id/textView4"
+                    android:layout_width="92dp"
+                    android:layout_height="0dp"
+                    android:gravity="center"
+                    android:text="@string/tv_S_temp_max"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+                    app:layout_constraintEnd_toEndOf="@+id/tvMax"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="@+id/tvMax" />
 
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="82dp"
+                    android:layout_width="123dp"
                     android:layout_height="0dp"
                     android:gravity="center"
                     android:text="@string/tv_S_temp_min"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                     app:layout_constraintEnd_toEndOf="@+id/tvMin"
-                    app:layout_constraintHorizontal_bias="0.456"
-                    app:layout_constraintStart_toStartOf="@+id/tvMin"
-                    app:layout_constraintTop_toBottomOf="@+id/tvMin" />
+                    app:layout_constraintHorizontal_bias="0.571"
+                    app:layout_constraintHorizontal_chainStyle="spread_inside"
+                    app:layout_constraintStart_toStartOf="@+id/tvMin" />
 
                 <TextView
                     android:id="@+id/textView3"
-                    android:layout_width="82dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="117dp"
+                    android:layout_height="0dp"
                     android:gravity="center"
                     android:text="@string/tv_S_temp"
                     app:layout_constraintEnd_toEndOf="@+id/tvTemp"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="@+id/tvTemp"
                     app:layout_constraintTop_toBottomOf="@+id/tvTemp" />
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="82dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/tv_S_temp_max"
-                    app:layout_constraintEnd_toEndOf="@+id/tvMax"
-                    app:layout_constraintStart_toStartOf="@+id/tvMax"
-                    app:layout_constraintTop_toBottomOf="@+id/tvMax" />
 
                 <TextView
                     android:id="@+id/textView5"
@@ -227,7 +231,7 @@
                     android:id="@+id/textView7"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/tv_S_presipitaciones"
+                    android:text="@string/tv_S_presion"
                     android:textAlignment="textEnd"
                     app:layout_constraintBaseline_toBaselineOf="@+id/tvPressure"
                     app:layout_constraintEnd_toEndOf="@+id/textView5"
