--- a/app/src/main/res/menu/ciudad_menu.xml
+++ b/app/src/main/res/menu/ciudad_menu.xml
@@ -4,6 +4,17 @@
 
     <item
         android:id="@+id/newCiudadFragment"
-        android:icon="@drawable/ic_baseline_format_list_numbered_24"
-        android:title="Administrar Ciudades" />
+        android:icon="@drawable/ic_baseline_add_circle_24"
+        android:title="@string/menu_agregar" />
+    <item
+        android:id="@+id/correo"
+        android:icon="@drawable/ic_baseline_email_24"
+        android:title="@string/menu_correo"
+        android:visible="true"
+        app:showAsAction="withText" />
+    <item
+        android:id="@+id/aboutFragment"
+        android:icon="@drawable/ic_baseline_help_outline_24"
+        android:title="@string/menu_about" />
+
 </menu>
