--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/ciudadesFragment"
         android:name="com.example.clima.ciudades.CiudadesFragment"
-        android:label="fragment_ciudades"
-        tools:layout="@layout/fragment_ciudades" >
+        android:label="@string/fc_title"
+        tools:layout="@layout/fragment_ciudades">
         <action
             android:id="@+id/action_ciudadesFragment_to_newCiudadFragment"
             app:destination="@id/newCiudadFragment" />
@@ -20,8 +20,8 @@
     <fragment
         android:id="@+id/newCiudadFragment"
         android:name="com.example.clima.newCiudad.NewCiudadFragment"
-        android:label="fragment_new_ciudad"
-        tools:layout="@layout/fragment_new_ciudad" >
+        android:label="@string/fn_title"
+        tools:layout="@layout/fragment_new_ciudad">
         <action
             android:id="@+id/action_newCiudadFragment_to_ciudadesFragment"
             app:destination="@id/ciudadesFragment" />
@@ -29,13 +29,18 @@
     <fragment
         android:id="@+id/detalleFragment"
         android:name="com.example.clima.detalle.DetalleFragment"
-        android:label="fragment_detalle"
-        tools:layout="@layout/fragment_detalle" >
+        android:label="@string/fd_title"
+        tools:layout="@layout/fragment_detalle">
         <action
             android:id="@+id/action_detalleFragment_to_ciudadesFragment"
             app:destination="@id/ciudadesFragment" />
         <argument
-            android:name="nombre"
-            app:argType="string" />
+            android:name="ciudad"
+            app:argType="com.example.clima.database.Ciudad" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.example.clima.about.AboutFragment"
+        android:label="@string/fa_title"
+        tools:layout="@layout/fragment_about" />
 </navigation>
