--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,9 +6,9 @@
         <item name="colorPrimaryVariant">#009688</item>
         <item name="colorOnPrimary">#004D40</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#000000</item>
+        <item name="colorSecondary">#CDDC39</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">#000000</item>
+        <item name="colorOnSecondary">#00BCD4</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
